src/test/deca/syntax/invalid/self/circularinclude1.deca
#include "circularinclude2.deca"